go-consq updated description field formatting.
TODO: update input/output schema

--- a/dev/go-consequences/go-consequences_parser.ipynb
+++ b/dev/go-consequences/go-consequences_parser.ipynb
@@ -267,6 +267,54 @@
     "# run_table_df['Structure Inventory File Exists'].values\n",
     "run_table_df[run_table_df['Structure Inventory File Exists'] == True]['Structure Inventory File'].tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Description: Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\n",
+      "\n",
+      "Simulations:\n",
+      "\n",
+      "\n",
+      "Issac (2012) - Amite LWI HEC-RAS Model results for Hurricane Isaac using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n",
+      "\n",
+      "The structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n",
+      "\n",
+      "All data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n",
+      "\n",
+      "\n",
+      "Katrina (2005) - Amite LWI HEC-RAS Model results for Hurricane Katrina using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n",
+      "\n",
+      "The structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n",
+      "\n",
+      "All data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n",
+      "\n",
+      "\n",
+      "Gustav (2008) - Amite LWI HEC-RAS Model results for Hurricane Gustav using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n",
+      "\n",
+      "The structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n",
+      "\n",
+      "All data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of dictionaries containing description information for the model application.\n",
+    "# write out the list of dictionaries to a string where each dictionary is on a new line.\n",
+    "description = [{\"Description\":\"Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\",\"Simulations\":[\"Issac (2012) - Amite LWI HEC-RAS Model results for Hurricane Isaac using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\\n\\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \\n\\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\",\"Katrina (2005) - Amite LWI HEC-RAS Model results for Hurricane Katrina using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\\n\\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \\n\\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\",\"Gustav (2008) - Amite LWI HEC-RAS Model results for Hurricane Gustav using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\\n\\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \\n\\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\"]}]\n",
+    "description_str = f\"Description: {description[0]['Description']}\"\n",
+    "description_str += '\\n\\nSimulations:'\n",
+    "for s in description[0]['Simulations']:\n",
+    "    # print('\\n\\n',s)\n",
+    "    description_str += '\\n\\n\\n'+s\n",
+    "print(description_str)"
+   ]
   }
  ],
  "metadata": {
